--- a/Inhalt/04_Inhalt/content_data_preparation.tex
+++ b/Inhalt/04_Inhalt/content_data_preparation.tex
@@ -241,7 +241,7 @@ $ python3 -c 'import cleaner; print(cleaner.clean("500grams of special baking fl
             
             For the corpus displayed in the previous section the document vectors calculated with the \ac{TF-IDF} measure are:
 
-           \begin{table}[!h]
+           \begin{table}[!ht]
            	\centering
            	\begin{tabular}{llllllllll}
            		$d_1 = [$ & 0.     & 0.7071 & 0.     & 0.     & 0.     & 0.7071 & 0.     & 0.     & $]$ \\
