--- a/Inhalt/04_Inhalt/content_data_understanding.tex
+++ b/Inhalt/04_Inhalt/content_data_understanding.tex
@@ -101,7 +101,7 @@ Both the unusable values and the uneven language distribution will be addressed 
 
 The quality of data for text mining purposes can be evaluated using four elementary dimensions \cite[p.~1279]{dataQualityAzeroual} :
 
-\begin{table}[!h]
+\begin{table}[!ht]
 	\begin{tabular}{lll}
 		\vspace{0.5cm}
 		\textbf{Completeness}                                                        & \begin{tabular}[c]{@{}l@{}}The extent to which data are of sufficient breadth, depth, \\ and scope for the task at hand\end{tabular}              &  \\
