--- a/Inhalt/04_Inhalt/content_modeling.tex
+++ b/Inhalt/04_Inhalt/content_modeling.tex
@@ -349,7 +349,7 @@ For visualizing, the \ac{t-SNE} algorithm is used. This projection allows to vis
 
 This visualization gives an overview on the clusters, but doesn't show what is contained in the clusters. For this, each cluster needs a topic.
 
-\begin{figure}[!h]
+\begin{figure}[!ht]
 	\centering
 	\includegraphics[width=\linewidth]{Bilder/models/minibatchkmeans.pdf}
 	\caption{All generated Clusters}
