--- a/Inhalt/literatur.bib
+++ b/Inhalt/literatur.bib
@@ -14,7 +14,7 @@
   urldate = {2022-04-27}
 }
 
-@online{alammarIllustratedBERTELMo2018,
+@online{alammarIllustratedBERTELMo,
   title = {The {{Illustrated BERT}}, {{ELMo}}, and Co. ({{How NLP Cracked Transfer Learning}})},
   author = {Alammar, Jay},
   date = {2018-12-03},
@@ -22,12 +22,6 @@
   urldate = {2022-05-20},
   abstract = {Discussions: Hacker News (98 points, 19 comments), Reddit r/MachineLearning (164 points, 20 comments) Translations: Chinese (Simplified), French 1, French 2, Japanese, Korean, Persian, Russian 2021 Update: I created this brief and highly accessible video intro to BERT The year 2018 has been an inflection point for machine learning models handling text (or more accurately, Natural Language Processing or NLP for short). Our conceptual understanding of how best to represent words and sentences in a way that best captures underlying meanings and relationships is rapidly evolving. Moreover, the NLP community has been putting forward incredibly powerful components that you can freely download and use in your own models and pipelines (It’s been referred to as NLP’s ImageNet moment, referencing how years ago similar developments accelerated the development of machine learning in Computer Vision tasks).},
   file = {/Users/I518232/Zotero/storage/G5BTG9YP/illustrated-bert.html}
-}
-
-@online{ArchitectureJupyterDocumentationa,
-  title = {Architecture — {{Jupyter Documentation}}},
-  url = {https://docs.jupyter.org/en/latest/projects/architecture/content-architecture.html},
-  urldate = {2022-04-30}
 }
 
 @misc{baLayerNormalization2016,
@@ -319,6 +313,12 @@
   langid = {english}
 }
 
+@online{jupyterteramArchitecture,
+  title = {Architecture — {{Jupyter Documentation}}},
+  url = {https://docs.jupyter.org/en/latest/projects/architecture/content-architecture.html},
+  urldate = {2022-04-30}
+}
+
 @incollection{KanbanAnderson,
   booktitle = {Kanban},
   author = {Anderson, David},
@@ -462,22 +462,6 @@
   file = {/Users/I518232/Zotero/storage/LKTG7ZQV/Mikolov et al. - 2013 - Distributed Representations of Words and Phrases a.pdf}
 }
 
-@unpublished{mikolovEfficientEstimationWord2013,
-  title = {Efficient {{Estimation}} of {{Word Representations}} in {{Vector Space}}},
-  author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
-  date = {2013-09-06},
-  eprint = {1301.3781},
-  eprinttype = {arxiv},
-  primaryclass = {cs},
-  doi = {10.48550/arxiv.1301.3781},
-  url = {http://arxiv.org/abs/1301.3781},
-  urldate = {2022-03-24},
-  abstract = {We propose two novel model architectures for computing continuous vector representations of words from very large data sets. The quality of these representations is measured in a word similarity task, and the results are compared to the previously best performing techniques based on different types of neural networks. We observe large improvements in accuracy at much lower computational cost, i.e. it takes less than a day to learn high quality word vectors from a 1.6 billion words data set. Furthermore, we show that these vectors provide state-of-the-art performance on our test set for measuring syntactic and semantic word similarities.},
-  archiveprefix = {arXiv},
-  keywords = {Computer Science - Computation and Language},
-  file = {/Users/I518232/Zotero/storage/7VB2EWHD/Mikolov et al. - 2013 - Efficient Estimation of Word Representations in Ve.pdf;/Users/I518232/Zotero/storage/8XHX2DDH/1301.3781.pdf;/Users/I518232/Zotero/storage/NLS24PG4/1301.html}
-}
-
 @online{MLGlossary,
   title = {Machine {{Learning Glossary}}},
   url = {https://developers.google.com/machine-learning/glossary},
@@ -595,7 +579,7 @@
   url = {https://scale.com/document-ai}
 }
 
-@online{ScaleDocumentAI,
+@online{scaleaiScaleDocumentAI,
   title = {Scale {{Document AI}}: {{Template-Free}}, {{High-Quality Extraction}}},
   url = {https://scale.com/document-ai},
   urldate = {2022-05-09},
@@ -773,6 +757,22 @@
   pages = {29--40},
   publisher = {{Manchester}},
   file = {/Users/I518232/Zotero/storage/GNBBS264/Wirth and Hipp - CRISP-DM Towards a Standard Process Model for Dat.pdf}
+}
+
+@unpublished{word2vec2013,
+  title = {Efficient {{Estimation}} of {{Word Representations}} in {{Vector Space}}},
+  author = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  date = {2013-09-06},
+  eprint = {1301.3781},
+  eprinttype = {arxiv},
+  primaryclass = {cs},
+  doi = {10.48550/arxiv.1301.3781},
+  url = {http://arxiv.org/abs/1301.3781},
+  urldate = {2022-03-24},
+  abstract = {We propose two novel model architectures for computing continuous vector representations of words from very large data sets. The quality of these representations is measured in a word similarity task, and the results are compared to the previously best performing techniques based on different types of neural networks. We observe large improvements in accuracy at much lower computational cost, i.e. it takes less than a day to learn high quality word vectors from a 1.6 billion words data set. Furthermore, we show that these vectors provide state-of-the-art performance on our test set for measuring syntactic and semantic word similarities.},
+  archiveprefix = {arXiv},
+  keywords = {Computer Science - Computation and Language},
+  file = {/Users/I518232/Zotero/storage/7VB2EWHD/Mikolov et al. - 2013 - Efficient Estimation of Word Representations in Ve.pdf;/Users/I518232/Zotero/storage/8XHX2DDH/1301.3781.pdf;/Users/I518232/Zotero/storage/NLS24PG4/1301.html}
 }
 
 @online{yildirimTwoChallengesKMeans2020,
