--- a/Inhalt/01_Standard/erklaerung.tex
+++ b/Inhalt/01_Standard/erklaerung.tex
@@ -1,4 +1,4 @@
-\chapter*{Eidesstattliche Erklärung}
+\chapter*{Statutory Declaration}
 
 I hereby declare that this Bachelor thesis 
 
@@ -12,7 +12,7 @@ Additionally, I certify that the printed version is identical to the electronic 
 
 \vspace{1cm}
 
-\verfassungsort, den 31. Mai 2022 \\[0.5cm]
+\verfassungsort, June 1, 2022 \\[0.5cm]
 \ifthenelse{\boolean{e-Abgabe}}
 	{\underline{Gez. \autor}}
 	{\makebox[6cm]{\hrulefill}}\\ 
