--- a/Inhalt/04_Inhalt/content_data_understanding.tex
+++ b/Inhalt/04_Inhalt/content_data_understanding.tex
@@ -46,7 +46,7 @@ The descriptions of invoice items vary greatly in their length. While the larges
 \begin{figure}[!h]
 	\centering
 	\includegraphics[height=8cm]{Bilder/data_understanding/toptendescr.png}
-	\caption{Top ten most frequent descriptions}
+	\caption{Top ten most frequent Descriptions}
 	\label{fig:descr-most-frequent}
 \end{figure}
 The top ten most frequent descriptions are led by two values which will be removed during data cleaning. The first value ('nan') is short for 'not a number'. The second most frequent description is an empty value. Unfortunately, these descriptions amount for one fourth of all text elements. The next descriptions are more speaking, for example consulting fees, credit card transaction fees, and payments for room and board.
