--- a/Inhalt/04_Inhalt/introduction.tex
+++ b/Inhalt/04_Inhalt/introduction.tex
@@ -15,7 +15,7 @@ How can information from invoice-like documents be extracted?
 How can extracted information provide insights?
 
 \section{Outline}
-The introductory Chapter briefly explains the motivation behind the thesis. Also, the current situation is assessed and research questions are presented. Lastly, it presents the structure of the thesis.
+The introductory Chapter briefly explains the motivation behind the thesis. Also, it assesses the current situation and presents research questions. Lastly, it presents the structure of the thesis.
 
 The following Chapter about objectives and criteria gives a detailed task description, and established criteria. In the section \ref{research-model} the process model is explained, evaluated and adjusted.
 
